--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack --config ./webpack.config.js --progress --colors",
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "5.x"
   },
   "repository": {
     "type": "git",
