--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "express": "^4.13.4",
+    "mysql": "^2.10.2",
     "path": "^0.12.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
