--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "fs": "0.0.2",
     "mysql": "^2.10.2",
     "path": "^0.12.7",
     "react": "^0.14.7",
